# YourBrain

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml
.claude/: settings.example.json
.cursor/rules/: yourbrain.mdc
.github/workflows/: ci.yml
.trae/rules/: yourbrain.md
crates/yb/: Cargo.toml
crates/yb-core/: Cargo.toml
crates/yb-core/src/: brain.rs  budget.rs  classify.rs  compress.rs  config.rs  conflict.rs  embed.rs  error.rs  guardrail.rs  lib.rs  memory.rs  rerank.rs  search.rs  store.rs  vector.rs
crates/yb-core/tests/: integration.rs
crates/yb/src/: cli.rs  context.rs  hook.rs  install.rs  main.rs  mcp.rs
docs/: IDE_SETUP.md  INSTALL.md
