[workspace]
resolver = "2"
members = ["crates/yb-core", "crates/yb"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["YourBrain Contributors"]
repository = "https://github.com/yourbrain/yourbrain"

[workspace.dependencies]
# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
thiserror = "1"
anyhow = "1"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI / binary
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
