[package]
name = "yb-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for YourBrain — AI memory engine with conflict resolution"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ulid.workspace = true
chrono.workspace = true
regex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
