[package]
name = "yb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "YourBrain CLI, MCP server, hook handler, and daemon (single binary)"

[[bin]]
name = "yb"
path = "src/main.rs"

[features]
# Passthrough: enable the ONNX embedder in yb-core. Build with
# `cargo build --features onnx` to get a binary that can run the ONNX backend.
onnx = ["yb-core/onnx"]

[dependencies]
yb-core = { path = "../yb-core", default-features = false }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
dirs.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
